--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="col">
             <p class="current-weather-icon-temp">
           <span class="current-weather-image" ><i class="fas fa-cloud-sun"></i></span>
+            <br>
           <span class="current-temperature"> <span id="update-temp">7</span> <a href="#" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
           </p>
         </div>
@@ -87,6 +88,10 @@
         </div>
     <img src="media/weatherplot.png" alt="Plot of Daily Weather">
     </div>
+    <p class="coded-by"> 
+      <a href="https://github.com/jlrepstein/weather-app" target="_blank" class="open-source-link">Open-source code</a> 
+      by JL Epstein 
+    </p>
     <script src="src/script.js"></script>
   </body>
 </html>
