Updated html spacing and datetime

--- a/index.html
+++ b/index.html
@@ -32,20 +32,22 @@
         <div class="col-2"></div>
       </div>
       <div class="row current-weather-row">
-        <div class="col">
+        <div class="col-1"></div>
+        <div class="col-5">
             <p>
             <h1 id="city-name">Paris</h1>
             <small id="current-date">Monday, December 28, 12:00 pm.</small>
-            <h2>Partly Cloudy</h2>
+            <h2 id="description">Partly Cloudy</h2>
           </p>
         </div>
-        <div class="col">
+        <div class="col-5">
             <p class="current-weather-icon-temp">
           <span class="current-weather-image" ><i class="fas fa-cloud-sun"></i></span>
             <br>
           <span class="current-temperature"> <span id="update-temp">7</span> <a href="#" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
           </p>
         </div>
+        <div class="col-1"></div>
       </div>
       <div class="row">
           <div class="col-1"></div>
