--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         </div>
         <div class="col-5">
             <p class="current-weather-icon-temp">
-          <span class="current-weather-image" ><i class="fas fa-cloud-sun"></i></span>
-            <br>
-          <span class="current-temperature"> <span id="update-temp">7</span> <a href="#" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
+          <span class="current-weather-image" ><img src="http://openweathermap.org/img/wn/10d@2x.png" alt="light showers" id="current-weather-icon"></span>
+          <span class="current-temperature"> <span class="current-temp-number" id="update-temp">7</span> <a href="#" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
           </p>
         </div>
         <div class="col-1"></div>
