Added humidity, wind speed and cloud coverage

--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
         <div class="col-1"></div>
       </div>
       <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+        <ul>
+          <small>
+            <li>
+              Humidity: <span id="humidity"></span>
+            </li>
+            <li>
+              Wind Speed: <span id="wind"></span>
+            </li>
+            <!-- <li>
+              Precipitation: <span id="precip"></span>
+            </li> -->
+            <li>
+              Cloud Coverage: <span id="cloudCoverage"></span>
+            </li>
+            </small>
+          </ul>
+          </div>
+          <div class="col-1"></div>
+        </div>
+      <div class="row">
           <div class="col-1"></div>
           <div class="col-2">
               <p>
@@ -83,12 +105,12 @@
           <div class="col-1"></div>
       </div>
     
-    <div class="button-container">
+    <!-- <div class="button-container">
         <button type="button" class="btn btn-secondary btn-sm day-button">Day</button>
         <button type="button" class="btn btn-secondary btn-sm hour-button">Hour</button>
         </div>
     <img src="media/weatherplot.png" alt="Plot of Daily Weather">
-    </div>
+    </div> -->
     <p class="coded-by"> 
       <a href="https://github.com/jlrepstein/weather-app" target="_blank" class="open-source-link">Open-source code</a> 
       by JL Epstein 
