Add temperature conversion

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-5">
             <p class="current-weather-icon-temp">
           <span class="current-weather-image" ><img src="http://openweathermap.org/img/wn/10d@2x.png" alt="light showers" id="current-weather-icon"></span>
-          <span class="current-temperature"> <span class="current-temp-number" id="update-temp">7</span> <a href="#" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
+          <span class="current-temperature"> <span class="current-temp-number" id="update-temp">7</span> <a href="#" class="active" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
           </p>
         </div>
         <div class="col-1"></div>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-1"></div>
       </div>
-    
+    </div>
     <!-- <div class="button-container">
         <button type="button" class="btn btn-secondary btn-sm day-button">Day</button>
         <button type="button" class="btn btn-secondary btn-sm hour-button">Hour</button>
