Removed fake data

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <div class="col-1"></div>
         <div class="col-5">
             <p>
-            <h1 id="city-name">Paris</h1>
-            <small id="current-date">Monday, December 28, 12:00 pm.</small>
-            <h2 id="description">Partly Cloudy</h2>
+            <h1 id="city-name"></h1>
+            <small id="current-date"></small>
+            <h2 id="description"></h2>
           </p>
         </div>
         <div class="col-5">
             <p class="current-weather-icon-temp">
-          <span class="current-weather-image" ><img src="http://openweathermap.org/img/wn/10d@2x.png" alt="light showers" id="current-weather-icon"></span>
-          <span class="current-temperature"> <span class="current-temp-number" id="update-temp">7</span> <a href="#" class="active" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
+          <span class="current-weather-image" ><img src="" alt="" id="current-weather-icon"></span>
+          <span class="current-temperature"> <span class="current-temp-number" id="update-temp"></span> <a href="#" class="active" id="degree-celcius"> °C </a>| <a href="#" id="degree-fahr">°F</a>  </span>
           </p>
         </div>
         <div class="col-1"></div>
@@ -54,10 +54,10 @@
         <ul>
           <small>
             <li>
-              Humidity: <span id="humidity"></span>
+              Humidity: <span id="humidity"></span> 
             </li>
             <li>
-              Wind Speed: <span id="wind"></span>
+              Wind Speed: <span id="wind"></span> 
             </li>
             <!-- <li>
               Precipitation: <span id="precip"></span>
@@ -70,7 +70,7 @@
           </div>
           <div class="col-1"></div>
         </div>
-      <div class="row">
+      <!-- <div class="row">
           <div class="col-1"></div>
           <div class="col-2">
               <p>
@@ -103,7 +103,7 @@
             </p>
           </div>
           <div class="col-1"></div>
-      </div>
+      </div> -->
     </div>
     <!-- <div class="button-container">
         <button type="button" class="btn btn-secondary btn-sm day-button">Day</button>
